@@ -143,10 +143,14 @@
 <dl>
 <dt>CRASH_ON_ABORT
 <dd>
-	      The default exception handler will either cause the program to
-	      simply terminate, or to crash - leaving a core dump.  The
-	      standard behavior is to leave a core dump if the library was
-	      built for debugging, and to simply exit if it was not.
+	      <p>
+
+		The default exception handler will either cause the program to
+		simply terminate, or to crash - leaving a core dump.  The
+		standard behavior is to leave a core dump if the library was
+		built for debugging, and to simply exit if it was not.
+	      </p>
+
 	      <p>
 
 		The CRASH_ON_ABORT environment variable can be used to
@@ -154,6 +158,184 @@
 		<em>FALSE</em>, or <em>0</em> then the program will simply
 		exit when an exception occurs.  Any other value of the
 		variable will cause the program to generate a core dump.
+	      </p>
+
+	    
+<dt>GNUSTEP_STRING_ENCODING
+<dd>
+	      <p>
+
+		This is used to specify the default encoding for 8-bit
+		strings.  It defaults to NSISOLatin1StringEncoding, but
+		may be any of the 8-bit encodings supported by your system
+		(excluding multi-byte encodings).
+	      </p>
+
+	    
+<dt>GNUSTEP_HOST_CPU
+<dd>
+	      <p>
+
+		Used in place of GNUSTEP_TARGET_CPU if the other is missing.
+	      </p>
+
+	    
+<dt>GNUSTEP_HOST_DIR
+<dd>
+	      <p>
+
+		Used in place of GNUSTEP_TARGET_DIR if the other is missing.
+	      </p>
+
+	    
+<dt>GNUSTEP_HOST_OS
+<dd>
+	      <p>
+
+		Used in place of GNUSTEP_TARGET_OS if the other is missing.
+	      </p>
+
+	    
+<dt>GNUSTEP_LOCAL_ROOT
+<dd>
+	      <p>
+
+		Used to specify the GNUstep root directory for local
+		(non-system) resources.  Typically all locally produced
+		or contributed software is installed relative to this.
+	      </p>
+
+	    
+<dt>GNUSTEP_NETWORK_ROOT
+<dd>
+	      <p>
+
+		Used to specify the GNUstep root directory for local
+		(non-system) resources that are intended to be shared
+		across a local network.  Typically this is an NFS exported
+		directory shared by many machines.  It provides an
+		alternative to GNUSTEP_LOCAL_ROOT.
+	      </p>
+
+	    
+<dt>GNUSTEP_SYSTEM_ROOT
+<dd>
+	      <p>
+
+		Used to specify the GNUstep system root directory ... all
+		system libraries, tools, applications, headers, resources
+		in general are located relative to this.
+	      </p>
+
+	    
+<dt>GNUSTEP_USER_ROOT
+<dd>
+	      <p>
+
+		Used to specify the GNUstep directory in which resources
+		specific to the current user are located.
+	      </p>
+
+	    
+<dt>GNUSTEP_TARGET_CPU
+<dd>
+	      <p>
+
+		Overrides the default value of the machine (hardware)
+		name used on this system.
+	      </p>
+
+	    
+<dt>GNUSTEP_TARGET_DIR
+<dd>
+	      <p>
+
+		Overrides the default path used to locate subdirectories
+		for GNUstep binaries withing bundles and applications.
+		This is normally equivalent to a path made up of the
+		GNUSTEP_TARGET_CPU and GNUSTEP_TARGET_OS
+	      </p>
+
+	    
+<dt>GNUSTEP_TARGET_OS
+<dd>
+	      <p>
+
+		Overrides the default value of the operating system
+		name used on this system.
+	      </p>
+
+	    
+<dt>GNUSTEP_TZ
+<dd>
+	      <p>
+
+		Used to specify the timezone to be used if there is no
+		timezone specified in the user defaults system.
+		The preferred
+		mechanism is to use the 'Local Time Zone' value from the
+		user defaults system.
+	      </p>
+
+	    
+<dt>HOMEDRIVE
+<dd>
+	      <p>
+
+		Used on windoze to locate the home directory.
+	      </p>
+
+	    
+<dt>HOMEPATH
+<dd>
+	      <p>
+
+		Used on windoze to locate the home directory.
+	      </p>
+
+	    
+<dt>LANGUAGES
+<dd>
+              <p>
+
+                If there is no NSLanguages user default set, and there is
+		no language infromation available in the native system locale
+		mechanism, then this environment variable is used to provide
+		a list of the languages that the user prefers to use.
+		languages listed in this variable must be separated by
+		semicolons.
+              </p>
+
+            
+<dt>LOGNAME
+<dd>
+              <p>
+
+                This is used as the default value for the current user
+		(as returned by the NSUserName() functions).  If it is not
+		specified, or contains an illegal value, other methods are
+		used to get the user name.
+              </p>
+
+            
+<dt>LIBRARY_COMBO
+<dd>
+              <p>
+
+                Used to override the default value of the combination
+		of standard libraries used to build binaries.  This
+		value locates the final subdirectory used to locate binaries.
+              </p>
+
+            
+<dt>TZ
+<dd>
+	      <p>
+
+		Used to specify the timezone to be used if there is no
+		timezone specified by any other mechanism.  The preferred
+		mechanism is to use the 'Local Time Zone' value from the
+		user defaults system.
 	      </p>
 
 	    
